--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ indent_size = 4
 
 [*.py]
 line_length = 88
-known_first_party = red_cc,config
+known_first_party = red,config
 multi_line_output = 3
 default_section = THIRDPARTY
 recursive = true
