--- a/local.yml
+++ b/local.yml
@@ -9,7 +9,7 @@ services:
     build:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
-    image: red_cc_local_django
+    image: red_local_django
     container_name: django
     depends_on:
       - postgres
@@ -26,7 +26,7 @@ services:
     build:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
-    image: red_cc_production_postgres
+    image: red_production_postgres
     container_name: postgres
     volumes:
       - local_postgres_data:/var/lib/postgresql/data
@@ -35,7 +35,7 @@ services:
       - ./.envs/.local/.postgres
 
   docs:
-    image: red_cc_local_docs
+    image: red_local_docs
     container_name: docs
     build:
       context: .
@@ -45,6 +45,6 @@ services:
     volumes:
       - ./docs:/docs
       - ./config:/app/config
-      - ./red_cc:/app/red_cc
+      - ./red:/app/red
     ports:
       - "7000:7000"
